Food Devlivery design 2file updated 09032022

--- a/account_1_4.html
+++ b/account_1_4.html
@@ -234,7 +234,7 @@
                     </div>
                 </div>
                 <!-- contain section -->
-                <main class="col ps-md-2 mt-5">
+                <main class="col ps-md-2 mt-5 side-history">
                     <div class="container mt-5">
                         <h2 class=" history-header ">History</h2>
                         <div class="htbl-sd">
