--- a/invite_frnd_msngr_view.html
+++ b/invite_frnd_msngr_view.html
@@ -86,7 +86,7 @@
 
     <section class="contain my-5">
         <div class="container pb-5">
-            <h1 class=" text-light text-uppercase text-center">Invite friends</h1>
+            <h1 class=" text-light text-center">Invite friends</h1>
             <div class="row">
                 <div class="col-md-2">
 
